--- a/docs/docs/classic-ml/deployment/index.mdx
+++ b/docs/docs/classic-ml/deployment/index.mdx
@@ -10,11 +10,6 @@ import { CardGroup, LogoCard } from "@site/src/components/Card";
 
 # MLflow Serving
 
-:::warning important
-This page describes the toolset for deploying your in-house MLflow Model. For information on the
-**LLM Deployment Server** (formerly known as AI Gateway), please refer to [MLflow Deployment Server](/genai/deployments).
-:::
-
 After training your machine learning model and ensuring its performance, the next step is deploying it to a production environment.
 This process can be complex, but MLflow simplifies it by offering an easy toolset for deploying your ML models to various targets,
 including local environments, cloud services, and Kubernetes clusters.
@@ -91,7 +86,7 @@ MLflow offers support for a variety of deployment targets. For detailed informat
   <LogoCard description="MLflow Deployment integrates with Kubernetes-native ML serving frameworks such as Seldon Core and KServe (formerly KFServing)." link="/ml/deployment/deploy-model-to-kubernetes">
     <span>![Kubernetes Logo](/images/logos/kubernetes-logo.png)</span>
   </LogoCard>
-  <LogoCard description="MLflow also supports more deployment targets such as Ray Serve, Redis AI, Torch Serve, Oracle Cloud Infrastructure (OCI), through community-supported plugins." link="/ml/plugins#deployment-plugins">
+  <LogoCard description="MLflow also supports more deployment targets such as Ray Serve, Redis AI, Torch Serve, Oracle Cloud Infrastructure (OCI), through community-supported plugins." link="/ml/plugins">
     <span>Community Supported Targets</span>
   </LogoCard>
 </CardGroup>
