--- a/docs/docs/classic-ml/getting-started/index.mdx
+++ b/docs/docs/classic-ml/getting-started/index.mdx
@@ -51,7 +51,7 @@ In the process of learning these key concepts, you will be exposed to the [MLflo
 a model training event to an MLflow run.
 
 <CardGroup>
-  <PageCard link="/ml/getting-started/intro-quickstart" headerText="MLFlow Tracking Quickstart Guide" text="Learn the basics of MLflow Tracking in a fast-paced guide with a focus on seeing your first model in the MLflow UI" />
+  <PageCard link="/ml/tracking/quickstart" headerText="MLFlow Tracking Quickstart Guide" text="Learn the basics of MLflow Tracking in a fast-paced guide with a focus on seeing your first model in the MLflow UI" />
   <PageCard link="/ml/getting-started/logging-first-model" headerText="In-depth Tutorial for MLflow Tracking" text="Learn the nuances of interfacing with the MLflow Tracking Server in an in-depth tutorial" />
 </CardGroup>
 
