--- a/docs/docs/classic-ml/getting-started/registering-first-model/step2-explore-registered-model.mdx
+++ b/docs/docs/classic-ml/getting-started/registering-first-model/step2-explore-registered-model.mdx
@@ -94,7 +94,7 @@ First, let's leave the experiment tracking tab and visit the model registry.
 </div>
 
 Next, let's add tags and a model version alias to
-[facilitate model deployment](/ml/model-registry/#new-model-deployment-tools).
+[facilitate model deployment](/ml/model-registry).
 You can add or edit tags and aliases by clicking on the corresponding `Add` link or pencil icon in
 the model version table. Let's...
 
