--- a/docs/docs/classic-ml/model/dependencies/index.mdx
+++ b/docs/docs/classic-ml/model/dependencies/index.mdx
@@ -25,7 +25,7 @@ dependencies and guidance for how to customize dependencies for your use case.
 :::tip
 One tip for improving MLflow's dependency inference accuracy is to add an `input_example` when saving your model. This enables MLflow to
 perform a model prediction before saving the model, thereby capturing the dependencies used during the prediction.
-Please refer to [Model Input Example](/ml/model/signatures#input-example) for additional, detailed usage of this parameter.
+Please refer to [Model Input Example](/ml/model/signatures) for additional, detailed usage of this parameter.
 :::
 
 <TOCInline toc={toc} maxHeadingLevel={2} />
@@ -649,7 +649,7 @@ and fix missing dependency errors.
 :::tip hint
 To reduce the possibility of dependency errors, you can add `input_example` when saving your model. This enables MLflow to
 perform a model prediction before saving the model, thereby capturing the dependencies used during the prediction.
-Please refer to [Model Input Example](/ml/model/signatures/#input-example) for additional, detailed usage of this parameter.
+Please refer to [Model Input Example](/ml/model/signatures) for additional, detailed usage of this parameter.
 :::
 
 #### 1. Check the missing dependencies
