--- a/docs/docs/classic-ml/model/signatures/index.mdx
+++ b/docs/docs/classic-ml/model/signatures/index.mdx
@@ -998,4 +998,4 @@ if model_info.signature != inferred:
 - [Signature Examples Notebook](/ml/model/notebooks/signature_examples) - Interactive examples
 - [Model API Documentation](/ml/model#model-api) - Complete API reference
 - [Deployment Guide](/ml/deployment) - Using signatures in production
-- [MLflow Model Format](/ml/models) - Technical specification
+- [MLflow Model Format](/ml/model) - Technical specification
