--- a/docs/docs/classic-ml/search/search-experiments/index.mdx
+++ b/docs/docs/classic-ml/search/search-experiments/index.mdx
@@ -11,7 +11,7 @@ support the same filter string syntax as <APILink fn="mlflow.search_runs" /> and
 
 ## Syntax
 
-See [Search Runs Syntax](/ml/search-runs#search-runs-syntax) for more information.
+See [Search Runs Syntax](/ml/search/search-runs#search-runs-syntax) for more information.
 
 ### Identifier
 
