--- a/docs/docs/classic-ml/tracking/tracking-api/index.mdx
+++ b/docs/docs/classic-ml/tracking/tracking-api/index.mdx
@@ -480,4 +480,4 @@ print(f"Final run status: {last_run.info.status}")
 **Next Steps:**
 - [Set up MLflow Tracking Server](/ml/tracking/server) for team collaboration
 - [Explore Auto Logging](/ml/tracking/autolog) for supported frameworks
-- [Learn advanced search patterns](/ml/search-runs) for experiment analysis
+- [Learn advanced search patterns](/ml/search/search-runs) for experiment analysis
